Test/exports/DatatypeExport.dfy.expect
DatatypeExport.dfy(41,24): Error: unresolved identifier: CT1
DatatypeExport.dfy(44,10): Error: the type of the match source expression must be a datatype (instead found A.T)
DatatypeExport.dfy(46,21): Error: unresolved identifier: n
DatatypeExport.dfy(48,34): Error: member 'CT1?' has not been imported in this scope and cannot be accessed here
DatatypeExport.dfy(48,53): Error: member 'X' has not been imported in this scope and cannot be accessed here
DatatypeExport.dfy(56,24): Error: unresolved identifier: CT1
6 resolution/type errors detected in DatatypeExport.dfy
